--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==1.2.4
+Flask==1.1.2
 requests==2.25.1
 APScheduler==3.7.0
-Flask==1.1.2
+pandas==1.2.4
 beautifulsoup4==4.9.3
 google_api_python_client==2.8.0
 protobuf==3.17.3
+gunicorn==20.1.0
