using scheduler.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 APScheduler==3.7.0
+flask-apscheduler==1.12.2
+Flask==1.1.2
 flask_cors==3.0.10
 requests==2.25.1
-Flask==1.1.2
 pandas==1.2.4
 beautifulsoup4==4.9.3
 google_api_python_client==2.13.0
